implement the splash screen and authentication with firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TubebeCabs</string>
+    <string name="continue_text">Continue</string>
+    <string name="register_text">Register</string>
 </resources>
